<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:id="@+id/dialogtv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/colorPrimary">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogmpesatitle"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            />
    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/mobilenoextinpl"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mobilenohint"
        app:layout_constraintTop_toBottomOf="@id/dialogtv"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:startIconDrawable="@drawable/ic_baseline_phone_24">
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/mobilenotie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="12"
            android:inputType="number"
            android:singleLine="true"
            android:lines="1"
            android:maxLines="1"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btncanceldialog1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        app:layout_constraintTop_toBottomOf="@id/mobilenoextinpl"
        android:text="@string/Cancel"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="4dp"
        app:layout_constraintRight_toLeftOf="@id/btnsubmitdialog1"
        />

    <Button
        android:id="@+id/btnsubmitdialog1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        app:layout_constraintTop_toBottomOf="@id/mobilenoextinpl"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btncanceldialog1"
        android:text="@string/ok"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp"
        app:layout_constraintTop_toBottomOf="@id/btncanceldialog1"/>

</androidx.constraintlayout.widget.ConstraintLayout>