<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/coodsignup"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:transitionName="coordlogin"
    android:layout_height="match_parent"
    tools:context=".Signup">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/coordlogin">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Signupinstead"
                    android:transitionName="txtlogin"
                    android:layout_marginLeft="16dp"
                    android:layout_marginTop="32dp"/>
                <View
                    android:layout_width="20dp"
                    android:layout_height="3dp"
                    android:background="@drawable/login_indicator_sep"
                    android:layout_marginLeft="16dp"
                    android:transitionName="vwloginindicator"
                    android:layout_marginTop="8dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtedemailsignuplayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Email"
                    android:layout_marginTop="32dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtedemailsignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:transitionName="txtedtemail"
                        android:drawableLeft="@drawable/ic_baseline_email_24"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtedusernamesignuplayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Username"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtedusernamesignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_baseline_person_24"
                        android:inputType="text"/>
                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtedpasswdsignuplayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/Password"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:endIconMode="password_toggle">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtedpasswdsignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/txtedcpasswdsignuplayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/CPassword"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    app:endIconMode="password_toggle">
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/txtedcpasswdsignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"/>
                </com.google.android.material.textfield.TextInputLayout>

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Iagree"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:textColor="@android:color/darker_gray"
                    android:layout_marginRight="16dp"/>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp">
                    <Button
                        android:id="@+id/btnsignup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/Create"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent">
                    </Button>
                    <ProgressBar
                        android:id="@+id/pbloadsignup"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:visibility="gone"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toBottomOf="parent"
                        android:elevation="4dp"/>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/backlogin"
                    android:layout_gravity="center_horizontal"
                    style="@style/Widget.MaterialComponents.Button.TextButton"
                    android:layout_marginTop="16dp"/>

                <Space
                    android:layout_width="2dp"
                    android:layout_height="32dp"/>

            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="100dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">
                <View
                    android:id="@+id/vwBg"
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:background="@color/colorPrimary"
                    android:transitionName="toolb"
                    app:layout_constraintTop_toTopOf="parent"/>

                <ImageView
                    android:id="@+id/imgsplash"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:src="@drawable/rings"
                    android:transitionName="img"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="@id/vwBg"
                    app:layout_constraintBottom_toBottomOf="@id/vwBg"
                    android:layout_marginLeft="16dp"/>

                <TextView
                    android:transitionName="txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/app_name"
                    app:layout_constraintLeft_toRightOf="@id/imgsplash"
                    app:layout_constraintTop_toTopOf="@id/vwBg"
                    app:layout_constraintBottom_toBottomOf="@id/vwBg"
                    android:textSize="20sp"
                    android:textColor="@android:color/white"
                    android:layout_marginLeft="16dp"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.appbar.AppBarLayout>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>

</androidx.constraintlayout.widget.ConstraintLayout>