<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".resetpassword">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:animateLayoutChanges="true">

            <LinearLayout
                android:id="@+id/lnloginNotresetpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="4dp"
                android:visibility="gone"
                android:paddingBottom="4dp"
                android:background="#FFC107">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_baseline_info_24"
                    android:layout_gravity="center_vertical"
                    android:tint="@android:color/black"
                    android:layout_marginLeft="16dp"/>

                <TextView
                    android:id="@+id/txtloginstatelogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/resetinstruction"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="16dp"
                    android:textColor="@android:color/black"/>
            </LinearLayout>

            <TextView
                android:id="@+id/txtlogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resetpassword"
                android:transitionName="txtlogin"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="32dp"/>
            <View
                android:id="@+id/vwloginindicator"
                android:layout_width="20dp"
                android:layout_height="3dp"
                android:transitionName="vwloginindicator"
                android:background="@drawable/login_indicator_sep"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="8dp"/>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtedtemaillayoutresetpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailaddr"
                android:layout_marginTop="32dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtedtemailresetemail"
                    android:layout_width="match_parent"
                    android:transitionName="txtedtemail"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_baseline_email_24"
                    android:inputType="text"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtedttcpasslayoutresetpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CPassword"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:visibility="gone"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtedttcpassresetpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtedttpasslayoutresetpass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/Password"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:visibility="gone"
                app:endIconMode="password_toggle">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/txtedttpassresetpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"/>
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp">
                <Button
                    android:id="@+id/btnresetpass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sendresetc"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent">
                </Button>
                <ProgressBar
                    android:id="@+id/pbloadloginrestpass"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:visibility="gone"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:elevation="4dp"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/btnlresetpass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/backlogin"
                android:textSize="12sp"
                android:layout_gravity="center_horizontal"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_marginTop="32dp"/>

            <Space
                android:layout_width="2dp"
                android:layout_height="32dp"/>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|snap|exitUntilCollapsed">

            <View
                android:id="@+id/vwBg"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:background="@color/colorPrimary"
                android:transitionName="toolb"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/imgsplash"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:src="@drawable/rings"
                android:transitionName="img"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/vwBg"
                app:layout_constraintBottom_toBottomOf="@id/vwBg"
                android:layout_marginLeft="16dp"/>

            <TextView
                android:id="@+id/txt"
                android:transitionName="txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                app:layout_constraintLeft_toRightOf="@id/imgsplash"
                app:layout_constraintTop_toTopOf="@id/vwBg"
                app:layout_constraintBottom_toBottomOf="@id/vwBg"
                android:textSize="20sp"
                android:textColor="@android:color/white"
                android:layout_marginLeft="16dp"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>